--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   get_it: ^8.0.2
   dio: ^5.7.0
   google_fonts: ^6.2.1
-  brasil_fields: ^1.15.0
   flutter_bloc: ^8.1.6
   injectable: ^2.5.0
   lottie: ^3.1.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
