--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   injectable_generator: ^2.6.2
   build_runner: ^2.4.13
+  mockito: ^5.4.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
